deleted dangerous local storage application